Fixed topbar overlap

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ h1 {
     color: black;
     border: 2px solid;
     border-radius: 10px;
+    z-index: -1;
 }
 
 #logo {
